--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.3.0",
+    "neat-csv": "^7.0.0",
     "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
